tests/lean/refinePreservesNaturalMVars.lean.expected.out
refinePreservesNaturalMVars.lean:29:2-29:3: error: unsolved goals
case d
⊢ Bool

case e
⊢ Nat
refinePreservesNaturalMVars.lean:30:2-30:3: error: no goals to be solved
refinePreservesNaturalMVars.lean:36:2-36:3: error: unsolved goals
case d
⊢ Bool

case e
⊢ Bool
refinePreservesNaturalMVars.lean:37:2-37:3: error: no goals to be solved
